<resources>
    <string name="mall_info_json">mallinfo.json</string>
    <string name="mall_info_json_default" translatable="false">mallinfo.json</string>
    <string name="amenities_json">amenities.json</string>
    <string name="amenities_json_default" translatable="false">amenities.json</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_ok">Ok</string>
    <string name="action_later">LATER</string>
    <string name="action_got_it">GOT IT</string>
    <string name="action_call">Call</string>
    <string name="action_exit">Exit</string>
    <string name="action_do_not_save">DON’T SAVE</string>
    <string name="action_save">SAVE</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_no_thanks">No, Thanks</string>
    <string name="action_done">DONE</string>
    <string name="action_retry">RETRY</string>
    <string name="action_sure">I\'M SURE</string>
    <string name="action_next">NEXT</string>
    <string name="action_dismiss">DISMISS</string>
    <string name="action_yes">YES</string>
    <string name="action_no">NO</string>
    <string name="action_remove">Remove</string>
    <string name="action_faq">FAQ</string>
    <string name="action_refresh">REFRESH</string>
    <string name="action_back">BACK</string>
    <string name="title_unsaved_changes">Unsaved Changes</string>
    <string name="title_make_calls">Call Number</string>
    <string name="title_testing">INSERT MSG</string>
    <string name="title_open_instagram_app">Open in Instagram App</string>
    <string name="title_open_instagram_website">View on Instagram Website</string>
    <string name="title_do_not_save_parking">Close Without Saving</string>
    <string name="title_remove_my_parking">Remove My Parking</string>
    <string name="title_add_notes">Add Notes</string>
    <string name="title_permission_denied">Location Access Denied</string>
    <string name="title_change_parking_spot">Change Parking Spot</string>
    <string name="title_map">Map</string>
    <string name="title_directory">Mall Directory</string>
    <string name="title_info">Mall Information</string>
    <string name="title_enable_bluetooth">Bluetooth</string>
    <string name="title_current_location_not_available">Current Location Not Available</string>
    <string name="title_remove_gc">Remove Gift Card</string>
    <string name="title_error">Error</string>
    <string name="title_oops">Oops!</string>
    <string name="fragment_news">NEWS</string>
    <string name="fragment_deals">DEALS</string>
    <string name="fragment_categories">CATEGORIES</string>
    <string name="fragment_stores">STORES A-Z</string>
    <string name="fragment_sub_categories">SUB CATEGORIES</string>
    <string name="fragment_category_stores">CATEGORY STORES</string>
    <string name="menu_home">HOME</string>
    <string name="menu_directory">DIRECTORY</string>
    <string name="menu_map">MAP</string>
    <string name="menu_info">INFO</string>
    <string name="social_facebook">Facebook</string>
    <string name="social_twitter">Twitter</string>
    <string name="social_instagram">Instagram</string>
    <string name="social_webpage">Page Web</string>
    <string name="intrst_card_title">What Interests You?</string>
    <string name="intrst_card_desc">Set your interests to get personalized deal recommendations just for you!</string>
    <string name="intrst_card_btn">SET MY INTERESTS</string>
    <string name="intrst_card_recommended_title">What Are Your Interests?</string>
    <string name="intrst_card_recommended_desc">Set your interests to get personalized deal recommendations just for you!</string>
    <string name="intrst_card_recommended_btn">ADJUST MY INTERESTS</string>
    <string name="transition_news_image">transition news image</string>
    <string name="transition_news_logo">transition news logo</string>
    <string name="transition_store_name">transition store name</string>
    <string name="transition_news_expiry_date">transition expiry date</string>
    <string name="transition_fav">transition fav</string>
    <string name="transition_share">transition share</string>
    <string name="transition_category_name">transition category name</string>
    <string name="transition_movie_poster">transition movie poster</string>
     <string name="title_activity_detail">DetailActivity</string>
    <string name="title_mall_hours">Mall Hours</string>
    <string name="title_mall_information">Mall Information</string>
    <string name="title_mall_holiday_hours">Jours fériés</string>
    <string name="lorem">Lorem lorem lorem lorem lorem lorem</string>
    <string name="test_disclaimer">* Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras non ante dictum, tempor orci nec, ultricies urna. Donec a consequat leo. Aliquam commodo venenatis nisi tempor lacinia. </string>
    <string name="mall_info_disclaimer_title">Hours of operation may vary at the following stores: </string>
    <string name="title_activity_test">Test</string>
    <string name="warning_download_completed">Download completed</string>
    <string name="warning_download_failed">Could not download data.</string>
    <string name="warning_user_content_download_failed">Could not download user profile.</string>
    <string name="warning_user_profile_update_failed">Could not update user profile.</string>
    <string name="warning_no_internet_connection">No Internet Connection</string>
    <string name="warning_retry">RETRY</string>
    <string name="warning_empty_news">There are no news or announcements.</string>
    <string name="warning_empty_deals">There are no deals today.</string>
    <string name="warning_exit_interest">If you exit, you will lose all your saved interests.</string>
    <string name="warning_make_call">Do you want to call\n</string>
    <string name="warning_fav_added">Added a favourite!</string>
    <string name="warning_fav_removed">Favourite removed</string>
    <string name="warning_open_instagram_app">Would you like to view this in the Instagram App?</string>
    <string name="warning_open_instagram_website">Would you like to view this on the Instagram website?</string>
    <string name="warning_no_recommended_deals">There are no matches for Recommended Deals at this time.</string>
    <string name="warning_no_parking_saved">Closing this window will remove all saved information about your parking spot.</string>
    <string name="warning_active_mall_activated">Connected to Mall</string>
    <string name="warning_no_deal_for_today">There are no deals today.</string>
    <string name="warning_no_event_for_today">There are no events scheduled.</string>
    <string name="warning_require_location_permission">The app requires your device’s location to access connected mall features. Are you sure you want to deny permissions?</string>
    <string name="warning_require_location_permission_for_blue_dot">The app requires this permission to find your location and access connected mall features. Are you sure you want to deny permissions?</string>
    <string name="warning_selected_same_store">Sorry, you can’t select the same store</string>
    <string name="warning_selected_same_location">Sorry, you can’t select the same location</string>
    <string name="warning_remove_my_parking">Are you sure you want to remove your parking spot?</string>
    <string name="warning_change_my_parking_spot">Changing your parking spot will overwrite any previously saved information.</string>
    <string name="warning_turn_on_bluetooth">Please turn on Bluetooth to find your current location.</string>
    <string name="warning_current_location_not_available">Sorry, current location not available. If you are at the mall, please try again in a few seconds.</string>
    <string name="warning_not_valid_address">Not a valid Email address.</string>
    <string name="warning_must_be_longer">Password must be 7 characters or longer.</string>
    <string name="warning_two_passwords_not_equal">Two passwords must be the same.</string>
    <string name="warning_wrong_date_format">Wrong date format.</string>
    <string name="warning_pick_earlier_date">Date of birth has to be earlier than today</string>
    <string name="warning_minimum_age_date">You do not meet the minimum age requirements.</string>
    <string name="warning_gift_card_already_exist">This Gift Card number has already been added to your profile.</string>
    <string name="warning_gift_card_has_been_removed">Gift Card has been removed.</string>
    <string name="section_header_recommended_deals">Recommended Deals</string>
    <string name="section_header_other_deals">Other Deals</string>
    <string name="activity_title_interested_category">What Interests You?</string>
    <string name="activity_title_interested_category_update">Update My Interests</string>
    <string name="activity_title_interested_store">Recommended Stores</string>
    <string name="activity_title_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="intrstd_cat_help_us">Highlight your preferred categories to get deals and stores recommendations</string>
    <string name="intrstd_cat_recommended_section_header">Based on your selections, here are some stores we think you’ll like.\nAdd them to your favourites to get exclusive deals!</string>
    <string name="intrstd_cat_other_section_header">&#8230; and if we missed any, make sure to\ncapture them below:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="intrstd_store_desc">Here are the stores we think you will like!\nSelect which are your favourite:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_get_directions">Get Directions</string>
    <string name="info_save_my_parking_spot">Save My Parking Spot</string>
    <string name="info_my_parking_spot">You are parked in </string>
    <string name="mall_info_mall_hours">Mall Hours</string>
    <string name="mall_info_guest_service">Guest Service</string>
    <string name="mall_info_amenities">Amenities</string>
    <string name="mall_info_gift_card">Gift Card Balance</string>
    <string name="mall_info_social">Social Network</string>
    <string name="mall_info_about">About</string>
    <string name="mall_info_shuttles">Shopping Shuttle</string>
    <string name="mall_info_public_transportation">Public Transportation</string>
    <string name="mall_info_tourist_information">Tourist Information</string>
    <string name="mall_info_accessibility">Accessibility</string>
    <string name="mall_info_customer_service">Customer Service</string>
    <string name="mall_info_cinema">Cinema</string>
    <string name="cta_find_on_map">Go to Map</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="onbd_btn_lets_get_started">Let’s Get Started</string>
    <string name="onbd_btn_lets_get_skip">Skip</string>
    <string name="onbd_btn_next">Next</string>
    <string name="signin_sign_up">Sign Up</string>
    <string name="signin_use_existing_profile">Use an existing profile by siging up with your Facebook or Google account.</string>
    <string name="signin_connect_with_fb">Connect with Facebook</string>
    <string name="signin_connect_with_google">Connect with Google</string>
    <string name="signin_signup_with_email">Sign Up With Email</string>
    <string name="signin_sign_in">Sign In</string>
    <string name="signin_dont_have_account">Don’t have an account?</string>
    <string name="signin_forgot_password">Forgot your password?</string>
    <string name="signin_other_sign_in_method">You can also sign in with a Facebook or Google account.</string>
</resources>