<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/llTransition"
    xmlns:ThemedImageView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <com.ivanhoecambridge.mall.views.CustomFontView.CustomFontTextView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:id="@+id/tvDesc"
        android:layout_marginBottom="20dp"
        app:fontFamily="@string/fontFamily_roboto_medium"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/signin_use_existing_profile"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/cvFb"
        android:layout_above="@+id/llSignIn"
        android:layout_below="@+id/tvDesc"
        android:layout_marginBottom="11dp"
        style="@style/CardViewSignIn"
        card_view:cardBackgroundColor="#df4a32"
        android:onClick="onClickFb"

        >

        <FrameLayout
            android:id="@+id/flFb"
            android:layout_gravity="center"
            android:background="@drawable/btn_fb"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.ivanhoecambridge.mall.views.ThemeColorImageView
                android:layout_marginLeft="21dp"
                android:layout_gravity="center_vertical"
                ThemedImageView:filterColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:src="@drawable/icn_facebook"
                />

            <com.ivanhoecambridge.mall.views.CustomFontView.CustomFontTextView
                app:fontFamily="@string/fontFamily_roboto_medium"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/signin_connect_with_fb"
                android:textSize="16dp"
                />

        </FrameLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvGoogle"
        android:layout_marginBottom="11dp"
        android:layout_below="@+id/cvFb"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="#df4a32"
        style="@style/CardViewSignIn"
        android:onClick="onClickGoogle"
        >

        <FrameLayout
            android:id="@+id/flGoogle"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.ivanhoecambridge.mall.views.ThemeColorImageView
                android:layout_marginLeft="21dp"
                android:layout_gravity="center_vertical"
                ThemedImageView:filterColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:src="@drawable/icn_googleplus"
                />

            <com.ivanhoecambridge.mall.views.CustomFontView.CustomFontTextView
                app:fontFamily="@string/fontFamily_roboto_medium"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/signin_connect_with_google"
                android:textSize="16dp"
                />

        </FrameLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvSignUp"
        android:layout_marginBottom="11dp"
        android:layout_below="@+id/cvGoogle"
        style="@style/CardViewSignIn"
        card_view:cardBackgroundColor="#FFFFFF"
        >

        <FrameLayout
            android:id="@+id/flSign"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.ivanhoecambridge.mall.views.ThemeColorImageView
                android:layout_marginLeft="21dp"
                android:layout_gravity="center_vertical"
                ThemedImageView:filterColor="@color/themeColor"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:src="@drawable/icn_email"
                />

            <com.ivanhoecambridge.mall.views.CustomFontView.CustomFontTextView
                app:fontFamily="@string/fontFamily_roboto_medium"
                android:textColor="@color/themeColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/signin_signup_with_email"
                android:id="@+id/tvSignUp"
                android:textSize="16dp"
                />

        </FrameLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>